# audio-book-player

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIOBOOK_PLAYER_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  REQUIREMENTS.md  package.json  pyproject.toml  requirements.txt  setup.cfg
backend/: Dockerfile  alembic.ini  pytest.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_album_column.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  base.py  content.py  permission.py  playback.py  stats.py  user.py
backend/app/schemas/: content.py  limit.py  permission.py  playback.py  stats.py  storage.py  token.py  user.py
backend/app/services/: auth.py  content.py  folder.py  ingestion.py  playback.py  scanner.py  stats.py  token_blacklist.py  user.py
backend/app/utils/: storage.py  storage_errors.py  user.py
backend/tests/: __init__.py  conftest.py  test_config.py
backend/tests/factories/: __init__.py  content_factory.py  (+4 more)
docs/: API.md  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  CODING_GUIDE.md  DATA_MODEL.md  INGESTION_DESIGN.md  README_PLACEHOLDER
frontend/: .eslintrc.json  .prettierrc.json  Dockerfile  package.json  tsconfig.json
frontend/e2e/: playwright.config.ts
frontend/shared/: index.ts  package.json
infra/: .env.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.prod.conf
infra/scripts/: deploy.sh  setup-dev.bat  setup-dev.sh
(+83 files in other folders)
